handling warning `--enable-native-access`